# rustex

./: Cargo.toml  README.md
src/: app.rs  input.rs  main.rs  ui.rs  widgets.rs
src/widgets/: file.rs  file_manager.rs  mod.rs  navigation.rs
