[package]
name = "rustex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
argh = "0.1.6"
crossterm = "0.21.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
strum = "0.22"
strum_macros = "0.22"
